# semilabs-hone

./: .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/rules/: database.md  test_writing_pitfalls.md  testing.md
docs/: DEV_PLAN.md  PRD_ALIGN_TASKS.md  PROJECT_CONTEXT.md  semilabs_hone_skim_sepc.md  skim.spec  skim_design.md
docs/modules/: 01-core-foundation.md  02-data-models.md  03-ipc-bus.md  04-web-shell.md  05-collection-browser.md  06-collection-anti-detect.md  07-scrapers-engine.md  08-scrapers-recorder.md  09-collection-captcha-scheduler.md  10-collection-export-image.md  11-collection-integration.md  12-tests.md
scripts/: check_constraints.py  loop_gate.sh
semilabs_hone/: __init__.py  __main__.py  cli.py
tests/: README.md  conftest.py
tests/collection/: test_cdp.py  test_contract_collection.py  test_csv_export.py  test_engine.py  test_engine_extra.py  test_field_extract.py  test_field_extract_extra.py  test_fingerprint.py  test_handlers_helpers.py  test_human_behavior.py  test_integration.py  test_llm_mapper.py  test_misc_modules.py  test_progress_relay.py  test_recorder.py  test_registry_zhihu.py  test_rhythm.py  test_risk_probes.py  test_routes_collection.py  test_routes_s9a.py  test_slide_solver.py  test_solver.py  test_ua_pool.py  test_worker_wiring.py
tests/core/: test_contract_core.py  test_ipc.py  test_models.py  test_retry.py  test_routes.py  test_worker_spawner.py
tests/fixtures/: comments_response.json  detail_response.json  search_response.json
tests/prd_bdd/: conftest.py  (+8 more)
(+69 files in other folders)
